refactor(application properties): use jasypt to hidden database username and password and delete commit log

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,36 @@
+spring.profiles.active=dev
 spring.servlet.multipart.max-file-size=1024MB
+
 spring.servlet.multipart.max-request-size=1024MB
-server.port=8080
+#server.port=8081
+management.endpoint.info.enabled=true
+info.app.name=Spring Sample Application
+info.app.description=This is my first spring boot application
+info.app.version=1.0.0
+management.endpoint.beans.enabled=false
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
+management.health.db.enabled=true
+management.health.defaults.enabled=true
+management.health.diskspace.enabled=true
+
+management.health.diskspace.threshold=0
+# 改变默认的查询节点路径
+management.endpoints.web.base-path=/manage
+spring.security.user.name=ENC(mnEP+XGo7vRLUhFb7AeT6g==)
+spring.security.user.password=ENC(tmTeUvvzUlJ+7ffvJXW/XHQ3R+pzXIYD)
+spring.security.user.roles=ACTUATOR_ADMIN
+management.endpoints.jmx.exposure.include=*
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://119.23.29.210:3306/upload_file_user?serverTimezone=Asia/Shanghai
+spring.datasource.username=ENC(nkAzMEdbUDNVG9S4SDdXiw==)
+spring.datasource.password=ENC(GzP/omt4NMBx20EAD06gWNDtuxGFp7qGvR/M54ZEiME=)
+#spring.jpa.show-sql=true
+server.servlet.context-path=/
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=false
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+server.port=8989
+
